Update content, images, fix mobile menu, deploy
Made-with: Cursor

--- a/index.html
+++ b/index.html
@@ -4,6 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ludee Care - Nuôi dưỡng vẻ đẹp tỏa sáng</title>
+    <!-- Open Graph / Social sharing -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://ludeecare.vn/" />
+    <meta property="og:title" content="Ludee Care - Nuôi dưỡng vẻ đẹp tỏa sáng" />
+    <meta property="og:description" content="Ludee Care là thương hiệu chăm sóc da và cơ thể, cam kết nuôi dưỡng làn da khỏe mạnh, mềm mịn từ sâu bên trong. Sữa tắm dưỡng sáng da với dầu cám gạo và sữa dê." />
+    <meta property="og:image" content="https://ludeecare.vn/og-image.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:locale" content="vi_VN" />
+    <meta property="og:site_name" content="Ludee Care" />
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Ludee Care - Nuôi dưỡng vẻ đẹp tỏa sáng" />
+    <meta name="twitter:description" content="Ludee Care là thương hiệu chăm sóc da và cơ thể, cam kết nuôi dưỡng làn da khỏe mạnh, mềm mịn từ sâu bên trong." />
+    <meta name="twitter:image" content="https://ludeecare.vn/og-image.jpg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -129,7 +144,7 @@
               Nuôi dưỡng vẻ đẹp tỏa sáng cùng Ludee Care
             </h2>
             <p class="section__text">
-              Ludee Care là thương hiệu chăm sóc da và cơ thể, cam kết nuôi
+              Ludee Care là thương hiệu chăm sóc cá nhân cao cấp, cam kết nuôi
               dưỡng làn da khỏe mạnh, mềm mịn từ sâu bên trong. Chúng tôi mang
               đến những sản phẩm chất lượng, biến mỗi khoảnh khắc chăm sóc da
               thành một trải nghiệm thư giãn, tái tạo năng lượng và tự tin tỏa
@@ -144,7 +159,7 @@
         <div class="container">
           <header class="section__header">
             <h2 class="section__title">
-              Nâng niu làn da trong từng bước tắm
+              Nâng niu làn da mỗi ngày
             </h2>
           </header>
           <div class="process-flow">
@@ -185,7 +200,7 @@
       <section class="section section--image-full" id="how">
         <div class="image-banner image-banner--hover">
           <img
-            src="Hinh anh/Section 4/portrait-attractive-asian-woman.jpg"
+            src="Hinh anh/Co gai han quoc/final 2.jpg"
             alt="Cách Ludee Care chăm da"
             class="image-banner__img"
           />
@@ -388,19 +403,19 @@
           1: {
             title: "Sữa tắm Ludee Care hương sữa dê",
             img: "Hinh anh/Hinh san pham/Cat backgound/Sua de.png",
-            desc: "Công thức giàu dưỡng chất từ sữa dê giúp làm sạch nhẹ nhàng, nuôi dưỡng làn da mềm mịn, sáng khỏe và ẩm mượt sau mỗi lần tắm.",
+            desc: "Công thức giàu dưỡng chất từ sữa dê giúp làm sạch nhẹ nhàng, nuôi dưỡng làn da mềm mịn và sáng khỏe sau mỗi lần tắm.",
             usage: "Sữa tắm dưỡng sáng da LUDEE CARE nhẹ nhàng làm sạch bụi bẩn và mồ hôi trên da. Công thức chứa dầu cám gạo kết hợp cùng Hydroxyethyl Urea, Allantoin, PPG-3 Caprylyl Ether và Polyquaternium-7 giúp dưỡng ẩm, làm dịu, nuôi dưỡng làn da mềm mịn, đàn hồi và sáng khỏe mỗi ngày. Hương thơm quyến rũ lan tỏa trên da, mang đến cảm giác thư giãn và dễ chịu sau mỗi lần tắm."
           },
           2: {
             title: "Sữa tắm Ludee Care hương hoa vanilla & dâu tây",
             img: "Hinh anh/Hinh san pham/Cat backgound/Dau tay.png",
-            desc: "Sự hòa quyện ngọt ngào giữa vanilla và dâu tây mang đến cảm giác thư giãn, dễ chịu, đồng thời giúp làn da mềm mại và tươi tắn hơn mỗi ngày.",
+            desc: "Sự hòa quyện ngọt ngào giữa vanilla và dâu tây mang đến nét nữ tính đầy cuốn hút, dễ chịu, đồng thời giúp làn da mềm mại và tươi tắn hơn mỗi ngày.",
             usage: "Sữa tắm dưỡng sáng da LUDEE CARE nhẹ nhàng làm sạch bụi bẩn và mồ hôi trên da. Công thức chứa dầu cám gạo kết hợp cùng Hydroxyethyl Urea, Allantoin, PPG-3 Caprylyl Ether và Polyquaternium-7 giúp dưỡng ẩm, làm dịu, nuôi dưỡng làn da mềm mịn, đàn hồi và sáng khỏe mỗi ngày. Hương thơm quyến rũ lan tỏa trên da, mang đến cảm giác thư giãn và dễ chịu sau mỗi lần tắm."
           },
           3: {
             title: "Sữa tắm Ludee Care hương hoa linh lan",
             img: "Hinh anh/Hinh san pham/Cat backgound/Linh lan.png",
-            desc: "Hương hoa linh lan thanh khiết, tinh tế giúp đánh thức các giác quan, mang lại trải nghiệm tắm gội nhẹ nhàng, thư thái và đầy nữ tính.",
+            desc: "Hương hoa linh lan thanh khiết giúp đánh thức các giác quan, mang lại trải nghiệm tắm nhẹ nhàng, thư thái và sang trọng.",
             usage: "Sữa tắm dưỡng sáng da LUDEE CARE nhẹ nhàng làm sạch bụi bẩn và mồ hôi trên da. Công thức chứa dầu cám gạo kết hợp cùng Hydroxyethyl Urea, Allantoin, PPG-3 Caprylyl Ether và Polyquaternium-7 giúp dưỡng ẩm, làm dịu, nuôi dưỡng làn da mềm mịn, đàn hồi và sáng khỏe mỗi ngày. Hương thơm quyến rũ lan tỏa trên da, mang đến cảm giác thư giãn và dễ chịu sau mỗi lần tắm."
           }
         };
